--- a/style-desmotagem100%.css
+++ b/style-desmotagem100%.css
@@ -1,27 +1,58 @@
 body {
+    margin: 0;
     background-color: white;
 }
-@media (max-width: 768px) {
-    /* Estilos para telas menores, como celulares */
-    body {
-        font-size: 16px;
-    }
 
+/* Layout responsivo para caixa superior */
+.caixa {
+    width: 100%;
+    background-color: #27c498;
+    height: 100px;
+    position: fixed;
+    top: 0;
+    z-index: 1000;
 }
-@media screen and (min-width: 1200px) {
-   
+
+.img-logo {
+    height: 100px;
+    margin: 0 auto;
+    display: block;
+}
+
+.letras-top {
+    text-align: center;
+    color: white;
+}
+
+/* Estilos para telas menores que 768px */
+@media (max-width: 768px) {
+    .letra-title-esquerda, .letra-title-direita,
+    .letra-title-esquerda2, .letra-title-direita2 {
+        font-size: 24px; /* Ajusta o tamanho do título para telas menores */
+        margin: 0; /* Remove margens excessivas */
+        text-align: center;
+    }
+    .caixa-informcao {
+        flex-direction: column;
+        height: auto;
+        padding: 20px;
+    }
+    .titulo-caixa-informacao, .texto-caixa-informacao {
+        margin: 0 auto;
+        width: 90%;
+    }
+}
+
+/* Estilos para telas maiores que 1200px */
+@media (min-width: 1200px) {
     .w-container {
         max-width: 1170px;
     }
-    
-    .works-row {
-        width: auto;
-    }
     .works-column {
         width: 25%;
-   
     }
-  }
+}
+
 
 .div-caixa-informacao {
 margin-top: 100px;
